--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
 			<version>3.4.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-tools</artifactId>
+			<version>1.0.0.M1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
