--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>28.0-jre</version>
+			<version>30.1-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-tools</artifactId>
-			<version>1.0.0.M1</version>
+			<version>3.4.2</version>
 		</dependency>
 	</dependencies>
 
